Server/esp_server/build/log/idf_py_stderr_output_4950
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'tcp_server_task':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:237:65: error: passing argument 4 of 'fwrite' from incompatible pointer type [-Wincompatible-pointer-types]
  237 |                     fwrite(write_buffer, 1, write_buffer_index, filename);
      |                                                                 ^~~~~~~~
      |                                                                 |
      |                                                                 const char *
In file included from /home/zeila/Documents/CMPT496/Graphite/esp-idf/components/newlib/platform_include/stdio.h:10,
                 from /home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:1:
/home/zeila/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/xtensa-esp-elf/include/stdio.h:230:67: note: expected 'FILE *' but argument is of type 'const char *'
  230 | size_t  fwrite (const void *__restrict , size_t _size, size_t _n, FILE *);
      |                                                                   ^~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:238:28: error: passing argument 1 of 'fflush' from incompatible pointer type [-Wincompatible-pointer-types]
  238 |                     fflush(filename);
      |                            ^~~~~~~~
      |                            |
      |                            const char *
/home/zeila/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/xtensa-esp-elf/include/stdio.h:198:17: note: expected 'FILE *' but argument is of type 'const char *'
  198 | int     fflush (FILE *);
      |                 ^~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:263:49: error: passing argument 4 of 'fwrite' from incompatible pointer type [-Wincompatible-pointer-types]
  263 |                     fwrite(read_buffer, 1, len, filename);
      |                                                 ^~~~~~~~
      |                                                 |
      |                                                 const char *
/home/zeila/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/xtensa-esp-elf/include/stdio.h:230:67: note: expected 'FILE *' but argument is of type 'const char *'
  230 | size_t  fwrite (const void *__restrict , size_t _size, size_t _n, FILE *);
      |                                                                   ^~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: At top level:
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:94:13: warning: 'wifi_init_softap' defined but not used [-Wunused-function]
   94 | static void wifi_init_softap() {
      |             ^~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/esp_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
